--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,10 @@ httpcore==1.0.5
 httplib2==0.22.0
 httpx==0.27.0
 idna==3.6
-numpy==1.26.4
+numpy==1.26.3
 oauthlib==3.2.2
 openai==1.16.1
-pandas==2.2.1
+pandas==2.2.0
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
@@ -38,8 +38,66 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 StrEnum==0.4.15
-tqdm==4.66.2
+tqdm==4.66.1
 typing_extensions==4.10.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+## The following requirements were added by pip freeze:
+altair==5.4.1
+attrs==24.2.0
+blinker==1.8.2
+click==8.1.7
+cmdstanpy==1.2.4
+contourpy==1.3.0
+cycler==0.12.1
+db-dtypes==1.3.0
+extra-streamlit-components==0.1.71
+fonttools==4.53.1
+git-filter-repo==2.45.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-cloud==0.34.0
+google-cloud-bigquery==3.25.0
+google-cloud-core==2.4.1
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+grpcio==1.66.1
+grpcio-status==1.62.3
+gscwrapper @ git+https://github.com/antoineeripret/gsc_wrapper@4d403c705db2afc9b846454dc6834dcd7d7bd1f9
+holidays==0.56
+importlib_resources==6.4.4
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mdurl==0.1.2
+narwhals==1.6.2
+packaging==24.1
+pandas-gbq==0.22.0
+patsy==0.5.6
+pillow==10.4.0
+prophet==1.1.5
+pyarrow==17.0.0
+pycausalimpact==0.1.1
+pydata-google-auth==1.8.2
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.9.0
+referencing==0.35.1
+rich==13.8.0
+rpds-py==0.20.0
+scipy==1.14.1
+smmap==5.0.1
+stanio==0.5.1
+statsmodels==0.14.2
+streamlit==1.38.0
+streamlit-google-auth==1.1.8
+tenacity==8.5.0
+textrazor==1.4.1
+toml==0.10.2
+tornado==6.4.1
+validators==0.23.2
